# Distribution-modelling-frontend

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  custom.cpp  custom.h  custom.ui  dialog.cpp  dialog.h  dialog.ui  dialogs.pro  documentation.html  gitattributes  intro.cpp  intro.h  intro.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pwindow.cpp  pwindow.h  pwindow.ui  renderarea.cpp  renderarea.h
DocumentationLatex/: annotated.tex  classCustom.tex  classCustom.tex.tmp  classDialog__coll__graph.dot  classIntro__inherit__graph.dot  classMainWindow.tex  classMainWindow__inherit__graph.dot  classRenderArea.tex  classRenderArea__coll__graph.dot
DocumentationV3/: 3_815_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_815_83_2CompilerIdC_2CMakeCCompilerId_8c.html  3_816_85_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_816_85_2CompilerIdC_2CMakeCCompilerId_8c.html  AutogenOldSettings_8txt.html  AutogenUsed_8txt.html  BernoulliMethodModel_8cpp.html  BernoulliMethodModel_8cpp__incl.map  BernoulliMethodModel_8cpp__incl.md5  BernoulliMethodModel_8h.html  BernoulliMethodModel_8h__dep__incl.map  BernoulliMethodModel_8h__dep__incl.md5  BernoulliMethodModel_8h__incl.map  BernoulliMethodModel_8h__incl.md5  BernoulliMethodModel_8h_source.html  CMakeCache_8txt.html  CMakeLists_8txt.html  CMakeRuleHashes_8txt.html  ChiSquared_8cpp.html  ChiSquared_8cpp__incl.map  ChiSquared_8cpp__incl.md5  ChiSquared_8h.html  ChiSquared_8h__dep__incl.map  ChiSquared_8h__dep__incl.md5  ChiSquared_8h__incl.map  ChiSquared_8h__incl.md5  ChiSquared_8h_source.html  Custom_8cpp.html  Custom_8h.html  Custom_8h_source.html  Example_8cpp-example.html  Example_8cpp.html  Example_8cpp__incl.map  Example_8cpp__incl.md5  Example_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  Example_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  Example_8h.html  Example_8h__incl.map  Example_8h__incl.md5  Example_8h_source.html  (+553 more)
Model/: BernoulliMethod.cpp  BernoulliMethod.h  BernoulliMethodModel.cpp  BernoulliMethodModel.h  ChiSquared.cpp  ChiSquared.h  Example.cpp  Example.h  HyperGeomTheoretical.cpp  HyperGeomTheoretical.h  HypogeomModel.cpp  HypogeomModel.h  InverseFunctionMethod.cpp  InverseFunctionMethod.h  InverseFunctionMethodModel.cpp  InverseFunctionMethodModel.h  Model.cpp  Model.h  ModelType.h  PType.h  probdist.cpp  probdist.h
UI/: Histogram.cpp  Histogram.h  Plot.cpp  Plot.h
html/: annotated.html  classCustom-members.html  classCustom.html  classCustom__coll__graph.dot  classDialog-members.html  classDialog.html  classDialog__inherit__graph.dot  classIntro-members.html  classIntro.html  classIntro__coll__graph.dot  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.dot  classPWindow-members.html  classPWindow.html  classPWindow__coll__graph.dot  classRenderArea-members.html  classRenderArea.html  classRenderArea__inherit__graph.dot  classes.html  custom_8h_source.html  dialog_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherits.html  intro_8h_source.html  mainwindow_8h_source.html  md_README.html  pages.html  pwindow_8h_source.html  renderarea_8h_source.html
latex/: classCustom__coll__graph.dot  classDialog.tex  classIntro.tex  classPWindow.tex  classPWindow__inherit__graph.dot  hierarchy.tex  md_README.tex  refman.tex
(+127 files in other folders)
